* Move Ajax.Request#isSameOrigin to Object.isSameOrigin() so the dom:loaded event check may make use of it. [jddalton]
  Note: Backwards compatibility warning.

* Make Array#grep and Enumerable#grep exit early if the regexp pattern is empty. [jddalton]

* Optimize Hash methods by replacing calls to "each" with for-in loops as well as change Hash aliases. [#539 state:resolved] [Brad Avogel, jddalton, Romain Dorgueil]
  Note: Backwards compatibility warning.
   - Hash#index is alias of Hash#keyOf
   - Hash#keyOf returns -1 if no match is found
   - Hash#include searches for the first matching hash value
   - Hash#filter, Hash#grep, Hash#reject, and Hash#zip return hashes
   - Hash#partition returns an array containing two hashes.

* Make String#(gsub|sub) auto remove the "global" flag from regexp patterns. [jddalton]

* Add Object.isRegExp() data type detection method. [jddalton]

* Ensure String#gsub returns the correct result when passed uncommon patterns. [jddalton, Samuel Lebeau]

* Array optimizations. [jddalton, Joe Gornick, John Resig]
 - Array#compact - Removed use of Array#select and added an option to remove "falsy" values
 - Array#flatten - Removed use of Array#inject
 - Array#include - Only use Array#indexOf
 - Array#indexOf - Renamed parameter from i to fromIndex
 - Array#inject  - Renamed parameter memo to accumulator
 - Array#map     - If iterator isn't specified return cloned array
 - Array#max|min - Use Math.max|min for non-sparse arrays when no iterator is given
 - Array#toJSON  - Removed use of Array#_each
 - Array#uniq    - Remove use of Array#inject and parameter sorted
 - Array#without - Removed use of Array#select
 - Array#intersect   - Removed use of Array#_each and renamed parameter other to array
 - Array#lastIndexOf - Renamed param i to fromIndex

* Remove unused feature test "ARGUMENTS_INSTANCEOF_ARRAY". [jddalton]

* Optimize ObjectRange by caching its range values on the first use of "_each". [jddalton]
