@@ -41,7 +41,7 @@
         sheet = getSheet(element);
         // bail when sheet is null/undefined on elements
         if (sheet == null) return false;
-        if (Object.isSameOrigin(sheet.href || '')) {
+        if (Object.isSameOrigin(sheet.href)) {
           results.push(sheet);
           if (!addImports(results, sheet))
             return false;
@@ -71,7 +71,7 @@
         ? function(collection, sheet) {
             var length = sheet.imports.length;
             while (length--) {
-              if (Object.isSameOrigin(sheet.imports[length].href || '')) {
+              if (Object.isSameOrigin(sheet.imports[length].href)) {
                 collection.push(sheet.imports[length]);
                 addImports(collection, sheet.imports[length])
               }
@@ -88,7 +88,7 @@
               // bail when sheet is null on rules
               ss = rules[length].styleSheet;
               if (ss === null) return false;
-              if (ss && Object.isSameOrigin(ss.href || '')) {
+              if (ss && Object.isSameOrigin(ss.href)) {
                 collection.push(ss);
                 if (!addImports(collection, ss))
                   return false;
